--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Fares A",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
