--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.1"
+    "webpack-merge": "^5.1.1",
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
