--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT = 3000
-GOENAMES_USERNAME = ******
-WEATHERBIT_API_KEY = ******
-PIXABAY_API_KEY = ******
+GOENAMES_USERNAME = 
+WEATHERBIT_API_KEY = 
+PIXABAY_API_KEY = 
